2010-10-26  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/48224> build-webkit: add support for --meter-tag switch

        Reviewed by Csaba Osztrogonác.

        * Scripts/build-webkit: Added support for --meter-tag switch.
        It should have been added with r60820.

2010-10-26  Ademar de Souza Reis Jr.  <ademar.reis@openbossa.org>

        Reviewed by Dumitru Daniliuc.

        check-webkit-style fails on operator+=, operator-=, ... methods
        https://bugs.webkit.org/show_bug.cgi?id=48258

        * Scripts/webkitpy/style/checkers/cpp.py: Added exceptions
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Added unit-tests

2010-10-26  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        remove DEFER support from new-run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=48387

        DEFER was needed when we were trying to ship Chrome beta.
        Now it's just extra complication.

        * Scripts/webkitpy/layout_tests/layout_package/json_layout_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_expectations.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_expectations_unittest.py:
        * Scripts/webkitpy/layout_tests/port/chromium_unittest.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
        * Scripts/webkitpy/style/checkers/test_expectations_unittest.py:

2010-10-26  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Adding import with_statement to fix python 2.5.

        Teach webkit-patch how to read credentials from the environment
        https://bugs.webkit.org/show_bug.cgi?id=48275

        * Scripts/webkitpy/common/net/credentials_unittest.py:
         - import with_statement to fix python 2.5.

2010-10-26  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=48375